@@ -1,6 +1,10 @@
 devel
 -----
 
+* Make `padded` and `autoincrement` key generators export their `lastValue` 
+  values, so that they are available in dumps and can be restored elsewhere
+  from a dump.
+
 * Improved logging for error 1489 ("a shard leader refuses to perform a 
   replication operation"). The log message will now provide the database and
   shard name plus the differing information about the shard leader.
